formver.compiler-plugin/testData/diagnostics/uniqueness_checker/try_catch.kt
// FULL_JDK
// UNIQUE_CHECK_ONLY

import org.jetbrains.kotlin.formver.plugin.Borrowed
import org.jetbrains.kotlin.formver.plugin.Unique

class A {
    var x: @Unique Any = Any()
}

class B {
    var y: @Unique A = A()
}

fun consume(a: @Unique Any) {}

fun borrow(a: @Borrowed Any) {}

fun mayThrow() {}

fun `consume in try only`(a: @Unique A) {
    try {
        consume(a)
    } catch (_: Throwable) {}

    consume(<!UNIQUENESS_MISMATCH!>a<!>)
}

fun `consume in try and catch`(a: @Unique A) {
    try {
        consume(a)
    } catch (_: Throwable) {
        consume(<!UNIQUENESS_MISMATCH!>a<!>)
    }

    consume(<!UNIQUENESS_MISMATCH!>a<!>)
}

fun `try only side-effects`(a: @Unique A) {
    try {
        mayThrow()
        borrow(a)
    } catch (_: Throwable) {}

    consume(a)
}

fun `consume in finally`(a: @Unique A) {
    try {
        mayThrow()
    } finally {
        consume(a)
    }

    consume(<!UNIQUENESS_MISMATCH!>a<!>)
}

fun `consume in try then finally borrow`(a: @Unique A) {
    try {
        consume(a)
    } finally {
        borrow(<!UNIQUENESS_MISMATCH!>a<!>)
    }

    consume(a)
}

fun `try expression as initializer`(a: @Unique A): @Unique A {
    val r: @Unique A = try { a } catch (_: Throwable) { A() }
    consume(<!UNIQUENESS_MISMATCH!>a<!>)
    return r
}

fun `consume subproperty in try`(b: @Unique B) {
    try {
        consume(b.y)
    } catch (_: Throwable) {}

    consume(<!LEAKED_UNIQUENESS_CONSISTENCY_VIOLATION!>b<!>)
}

fun `consume in alternative catches`(a: @Unique A) {
    try {
        mayThrow()
    } catch (_: IllegalStateException) {
        consume(a)
    } catch (_: Throwable) {
        consume(a)
    }

    consume(<!UNIQUENESS_MISMATCH!>a<!>)
}
